<resources>
    <string name="app_name">Longer IR</string>
    <string name="app_upgrade_tip_title">Release Notes (%1$s)</string>
    <string name="str_remote">My Remote Control</string>
    <string name="str_prc">PRC</string>
    <string name="str_mall">Mall</string>
    <string name="str_delete">Delete</string>
    <string name="str_rename">Rename</string>
    <string name="str_maderemote">Made a truely remote control!</string>
    <string name="str_info">Info</string>
    <string name="str_suredelete">Are you sure delete it?</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_Ok">Ok</string>
    <string name="str_notbenull">Can not be null</string>
    <string name="str_inputnew">Input a new name</string>
    <string name="str_errorunknown">err unknown</string>
    <string name="str_try">Please try again</string>
    <string name="str_wait">Waiting...</string>
    <string name="str_start">Start</string>
    <string name="str_stop">Stop</string>
    <string name="str_usbin">Ir device is ok</string>
    <string name="str_blein">Ble device is ok</string>
    <string name="str_usbout">Ir device is missing</string>
    <string name="str_noirdev">Ir device cannot be founded!</string>
    <string name="str_hadstop">Ir Communication stopped</string>
    <string name="str_prcsuc">Sucessful</string>
    <string name="str_newprc">New PRC Scheme</string>
    <string name="str_addremote">Add to My Remote Control</string>
    <string name="str_addlearn">Learning a remote control</string>
    <string name="str_openrotate">Plase open scrren rotate switch</string>
    <string name="str_ac_mode">Mode</string>
    <string name="str_ac_power">Power</string>
    <string name="str_ac_fan">Fan</string>
    <string name="str_ac_vane">Vane</string>
    <string name="str_ac_swing">Swing</string>
    <string name="str_ac_temp">TEMP</string>
    <string name="str_noacrmt">It\'s not a AC remote control</string>
    <string name="str_add_byremote">Add through Appliances Info</string>
    <string name="str_add_bylearn">Add through Learning</string>
    <string name="str_add_bysearch">Add through Search</string>
    <string name="str_add_side">Add through transmitting</string>
    <string name="str_foundnewversion">The newer version had been founded,Update now?</string>
    <string name="str_identify">Identify Remote Control</string>
    <string name="str_login">Login</string>
    <string name="str_welcome">Welcome</string>
    <string name="str_logout">Sign Out</string>
    <string name="str_about">About</string>
    <string name="str_selectbrand">Select Brand</string>
    <string name="str_filter">Filter</string>
    <string name="str_databasesys">Factory Database</string>
    <string name="str_databaseshare">Shared Database</string>
    <string name="str_databaseowner">Owner Database</string>
    <string name="str_selectmodel">Select Model</string>
    <string name="str_model">Model</string>
    <string name="str_brand">Brand</string>
    <string name="str_dev">DEV</string>
    <string name="str_id">ID</string>
    <string name="str_nodev">No valid Ir device</string>
    <string name="str_blue_in">Blueble Device Founded</string>
    <string name="str_pls_sel_remote">Please enter brand and model</string>
    <string name="str_sel_desremote">Select a programmable remote control</string>
    <string name="str_sel_device">Select what device want to program</string>
    <string name="str_sel_page">Please select where you want to program</string>
    <string name="str_sel_mys">Please select which you want to program</string>
    <string name="str_program">PROGRAMME</string>
    <string name="str_mobiletype">Mobile IrDA Port</string>
    <string name="str_usbtype">USB Transceiver</string>
    <string name="str_bletype">Bluetooth Transceiver</string>
    <string name="str_audiotype">Audio Port</string>
    <string name="str_blermt">Bluetooth Remote Control</string>
    <string name="str_desirport">IrDA Device...</string>
    <string name="str_pls_sel_irport">Please select IrDa Port</string>
    <string name="str_ready">Ready</string>
    <string name="str_unsupported">Unsupported Mobile</string>
    <string name="str_notfound">Not found,click buy now</string>
    <string name="str_notthis">Your remote model is %s, is not different from that in software. Continue?</string>
    <string name="str_firstpage">The first page can not be null</string>
    <string name="str_prcwizard">PRC waizard</string>
    <string name="str_rush_tip">Device needs some time to respond,\nwait a moment after action.</string>
    <string name="str_rush_tip2">Point the IrDa port at device,\nand tap the button.\n Make sure Deivce responds</string>
    <string name="str_rush_tip3">Test buttons</string>
    <string name="str_rush_tip4">Does device turn on or off?</string>
    <string name="str_yes">Yes?</string>
    <string name="str_no">No?</string>
    <string name="str_exitqury">The remote control had been changed,are you sure exit whithout save?</string>
    <string name="str_edit">Edit</string>
    <string name="str_del">Remove</string>
    <string name="str_append">Append</string>
    <string name="str_type_hasaudio">Audio Port/Infrared communication</string>
    <string name="str_type_noaudio">Infrared communication</string>
    <string name="str_type_ble">Bluetooth LE</string>
    <string name="str_type_ac">AC Remote Control</string>
    <string name="str_sel_kinds">Please select kinds you want to program</string>
    <string name="str_sel_universal">Universal codes settings</string>
    <string name="str_select">Select</string>
    <string name="str_universal_invalid">Invalid code number</string>
    <string name="str_nomyremote">No Remote Control in "My remote control"</string>
    <string name="str_searchmode">Please select search mode</string>
    <string name="str_synremote">Synchronize my remote control</string>
    <string name="str_changepswd">Change password</string>
    <string name="str_autologin">Auto login</string>
    <string name="str_forgot">Forgot</string>
    <string name="str_password">Password</string>
    <string name="str_newuser">New</string>
    <string name="str_input_loginname">email or login name</string>
    <string name="str_email">Email address</string>
    <string name="str_verifycode">VerifyCode</string>
    <string name="str_getverycode">Get Verify Code</string>
    <string name="str_next">Next</string>
    <string name="str_repeat_password">Password repeat</string>
    <string name="str_input_validname">Input valid login name or email</string>
    <string name="str_input_password">Input your password</string>
    <string name="str_login_ok">Login Sucessful</string>
    <string name="str_password_reset">Reset password</string>
    <string name="str_verifycode_input">Input verify code please</string>
    <string name="str_invalid_verifycode">Invalid verify code!</string>
    <string name="str_input_email">Please input valid email</string>
    <string name="str_ok_send_vericode">Send verify code sucessfull,please check your email box.</string>
    <string name="str_err">Error</string>
    <string name="str_no_append">No any source remote control selected</string>
    <string name="str_data_download">Data communication</string>
    <string name="str_skip">Skip</string>
    <string name="str_goin">Go in</string>
    <string name="str_model_btn">Button\'s Model List</string>
    <string name="str_setting">Setting</string>
    <string name="str_model_editor">Button\'s Model Editor</string>
    <string name="str_model_input_modelname">Model\'s descripe name</string>
    <string name="str_col">Column Count</string>
    <string name="str_rows">Rows Count</string>
    <string name="str_btnname">Name</string>
    <string name="str_keyidx">Index</string>
    <string name="str_sno">SNO</string>
    <string name="str_save_ok">Save sucessfull</string>
    <string name="str_relearn">Relearn</string>
    <string name="str_shareto">Share...</string>
    <string name="str_pls_login">Login please</string>
    <string name="str_copy">Copy</string>
    <string name="str_model_cantedit">System model can not edit!</string>
    <string name="str_prc_adjust">Rerange buttons</string>
    <string name="str_changed_save">Save it?</string>
    <string name="str_user_xieyi">User agreement</string>
    <string name="str_yisi">Privacy policy</string>
    <string name="str_coltd">Changzhou Longer Electronics Co.,Ltd</string>
    <string name="str_suoyou" translatable="false">Copyright © 2020 Longer,All rights reserved</string>
    <string name="str_all">All</string>
    <string name="str_tips_btnlititle">The buttons count is little!</string>
    <string name="str_err_net">Check network Please</string>
    <string name="str_share_ok">Upload and shared successful!</string>
    <string name="str_share_err">The remote control already exists in server!</string>
    <string name="str_myshared">My Shared</string>
    <string name="str_add_ok">Add to my remote control successful</string>

    <string name="str_ac_00">POW</string>
    <string name="str_ac_01">Off</string>
    <string name="str_ac_02">On</string>

    <string name="str_ac_10">Temp.</string>

    <string name="str_ac_20">MODE</string>
    <string name="str_ac_21">Auto</string>
    <string name="str_ac_22">Cool</string>
    <string name="str_ac_23">Dehum</string>
    <string name="str_ac_24">Fan</string>
    <string name="str_ac_25">Heat</string>

    <string name="str_ac_30">FAN</string>
    <string name="str_ac_31">Auto</string>
    <string name="str_ac_32">High</string>
    <string name="str_ac_33">Mid</string>
    <string name="str_ac_34">Low</string>

    <string name="str_ac_40">SWING</string>
    <string name="str_ac_41">Stop</string>
    <string name="str_ac_42">Swing</string>

    <string name="str_ac_50">VANE</string>
    <string name="str_ac_51">Angle1</string>
    <string name="str_ac_52">Angle2</string>
    <string name="str_ac_53">Angle3</string>
    <string name="str_ac_54">Angle4</string>
    <string name="str_ac_55">Angle5</string>
    <string name="str_ac_56">Angle6</string>

    <string name="str_ac_60">STRONG</string>
    <string name="str_ac_61">Off</string>
    <string name="str_ac_62">On</string>

    <string name="str_ac_70">AUXILARY</string>
    <string name="str_ac_71">Off</string>
    <string name="str_ac_72">On</string>
    <string name="str_ac_learn">AC Learning</string>
    <string name="str_modelname_ac">A/C Model</string>
    <string name="str_edit_remote">Codes Editor</string>
    <string name="str_share_qrcode">Share with a QR Code</string>
    <string name="str_file_save">Save File</string>
    <string name="str_user_center">User center</string>
    <string name="str_irport_select">IrDa Port Selection</string>
    <string name="str_qrcode_sacan">Sacen QR Code...</string>
    <string name="str_search_his">Search histry</string>
    <string name="str_hot_search">Hot search</string>
    <string name="str_search">Search</string>
    <string name="str_desremote_error">Can not identify</string>
    <string name="str_ac_cannotedit">AC\'s Cannot Editor</string>
    <string name="str_shared">Provider</string>
    <string name="str_ble_guide">Operation guide</string>
    <string name="str_ble_guide_desc">1)Enable Ble,To Press left and right together2)Disable Ble,Press any key</string>
    <string name="str_vip_select">Select guest id</string>
    <string name="str_data_change">Ir Database</string>
    <string name="str_data_europe">Europe</string>
    <string name="str_data_American">America</string>
    <string name="str_data_china">China</string>
    <string name="str_data_auto">Automatic</string>
    <string name="str_favourite">Favourite</string>
    <string name="str_btnname_change">Change name</string>
    <string name="str_tips_add">No remote control,Click + to search</string>
    <string name="str_try_learn">Adjust posture, try again</string>

</resources>
