<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_theme_1"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/qmui_topbar_height" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/qmui_config_color_white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/pnlsta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvbtn00"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_00"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvbtn01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_01" />

                <TextView
                    android:id="@+id/tvbtn02"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_02" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvbtn20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_20"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvbtn21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_21" />

                <TextView
                    android:id="@+id/tvbtn22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_22" />

                <TextView
                    android:id="@+id/tvbtn23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_23" />

                <TextView
                    android:id="@+id/tvbtn24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_24" />

                <TextView
                    android:id="@+id/tvbtn25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_25" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvbtn30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_30"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvbtn31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_31" />

                <TextView
                    android:id="@+id/tvbtn32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_32" />

                <TextView
                    android:id="@+id/tvbtn33"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_33" />

                <TextView
                    android:id="@+id/tvbtn34"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_34" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvbtn40"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_40"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvbtn41"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_41" />

                <TextView
                    android:id="@+id/tvbtn42"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_42" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvbtn50"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_50"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvbtn51"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_51" />

                <TextView
                    android:id="@+id/tvbtn52"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_52" />

                <TextView
                    android:id="@+id/tvbtn53"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_53" />

                <TextView
                    android:id="@+id/tvbtn54"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_54" />

                <TextView
                    android:id="@+id/tvbtn55"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_55" />

                <TextView
                    android:id="@+id/tvbtn56"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_56" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvbtn60"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_60"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvbtn61"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_61" />

                <TextView
                    android:id="@+id/tvbtn62"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_62" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvbtn70"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_70"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvbtn71"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_71" />

                <TextView
                    android:id="@+id/tvbtn72"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_72" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvbtn10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minHeight="@dimen/list_ss_item_height"
                    android:singleLine="true"
                    android:text="@string/str_ac_10"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textStyle="bold" />

                <ListView
                    android:id="@+id/templist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:dividerHeight="0px" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/app_color_theme_1"
            android:orientation="vertical" />

        <ListView
            android:id="@+id/recrdlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:dividerHeight="0dp"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false" />
    </LinearLayout>
</LinearLayout>
